--- a/training.ipynb
+++ b/training.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-03T14:27:03.079403Z",
-     "start_time": "2025-07-03T14:26:42.995002Z"
+     "end_time": "2025-07-09T12:13:34.835373Z",
+     "start_time": "2025-07-09T12:13:33.469356Z"
     }
    },
    "cell_type": "code",
@@ -23,8 +23,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-03T14:27:45.645145Z",
-     "start_time": "2025-07-03T14:27:44.331933Z"
+     "end_time": "2025-07-09T12:13:37.858519Z",
+     "start_time": "2025-07-09T12:13:36.584238Z"
     }
    },
    "cell_type": "code",
@@ -55,8 +55,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-03T14:27:48.951939Z",
-     "start_time": "2025-07-03T14:27:48.947978Z"
+     "end_time": "2025-07-09T12:13:39.505062Z",
+     "start_time": "2025-07-09T12:13:39.488983Z"
     }
    },
    "cell_type": "code",
@@ -398,7 +398,7 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2025-07-03T14:27:58.126646Z"
+     "start_time": "2025-07-09T12:26:14.721915Z"
     }
    },
    "cell_type": "code",
@@ -435,6 +435,9 @@
     "    for epoch in range(num_epochs):\n",
     "        model.train()\n",
     "        total_train_loss = 0\n",
+    "\n",
+    "        print(\"-------------------------------------\")\n",
+    "        print(f\"Epoch [{epoch+1}] has started\")\n",
     "\n",
     "        for batch_idx, (features, speeds) in enumerate(train_dataloader):\n",
     "            speeds = speeds.squeeze(1)  # Remove extra dimension from speeds if present\n",
@@ -494,12 +497,12 @@
     "            }, location_state_GRU + str(j) + \".pt\")\n",
     "\n",
     "            # Save traced model for MATLAB -> taken out\n",
-    "            \"\"\"\n",
-    "            traced_model = torch.jit.trace(model, example_input)\n",
-    "            torch.jit.save(traced_model, location_traced + str(j) + \"_traced.pt\")  # Save as traced TorchScript model\n",
     "\n",
-    "            traced_model.save(location_traced + str(j) + \"_traced_simple_save.pt\")  # Save as traced TorchScript model\n",
-    "            \"\"\"\n",
+    "            traced_model = torch.jit.trace(model, example_input)\n",
+    "            torch.jit.save(traced_model, location_traced_GRU + str(j) + \"_traced_jit_save.pt\")  # Save as traced TorchScript model\n",
+    "\n",
+    "            traced_model.save(location_traced_GRU + str(j) + \"_traced_simple_save.pt\")  # Save as traced TorchScript model\n",
+    "\n",
     "\n",
     "\n",
     "            # Export model to ONNX\n",
@@ -531,14 +534,16 @@
     "        print(\"We're out of epochs but patience limit has not been reached -> starting next model!\")\n",
     "        print(\"-----------------------------------------------------------------------------------\")"
    ],
-   "id": "6b6e5e3893cf6dd3",
+   "id": "7f651b035974ed05",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "-------------------------------------\n",
-      "Training has started for GRU model 1\n"
+      "Training has started for GRU model 1\n",
+      "-------------------------------------\n",
+      "Epoch [1] has started\n"
      ]
     }
    ],
