--- a/training.ipynb
+++ b/training.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-09T12:13:34.835373Z",
-     "start_time": "2025-07-09T12:13:33.469356Z"
+     "end_time": "2025-07-09T14:02:34.691671Z",
+     "start_time": "2025-07-09T14:02:32.561550Z"
     }
    },
    "cell_type": "code",
@@ -23,8 +23,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-09T12:13:37.858519Z",
-     "start_time": "2025-07-09T12:13:36.584238Z"
+     "end_time": "2025-07-09T14:02:36.266979Z",
+     "start_time": "2025-07-09T14:02:36.246499Z"
     }
    },
    "cell_type": "code",
@@ -55,8 +55,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-09T12:13:39.505062Z",
-     "start_time": "2025-07-09T12:13:39.488983Z"
+     "end_time": "2025-07-09T14:02:37.830618Z",
+     "start_time": "2025-07-09T14:02:37.822429Z"
     }
    },
    "cell_type": "code",
@@ -398,7 +398,7 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2025-07-09T12:26:14.721915Z"
+     "start_time": "2025-07-09T14:04:57.946128Z"
     }
    },
    "cell_type": "code",
@@ -495,13 +495,16 @@
     "                \"learning_rate\": learning_rate,\n",
     "                \"num_epochs\": num_epochs\n",
     "            }, location_state_GRU + str(j) + \".pt\")\n",
+    "            print(\"model \" + location_state_GRU + str(j) + \".pt\" + \" saved\")\n",
     "\n",
     "            # Save traced model for MATLAB -> taken out\n",
     "\n",
     "            traced_model = torch.jit.trace(model, example_input)\n",
     "            torch.jit.save(traced_model, location_traced_GRU + str(j) + \"_traced_jit_save.pt\")  # Save as traced TorchScript model\n",
+    "            print(\"model \" + location_traced_GRU + str(j) + \"_traced_jit_save.pt\" + \" saved\")\n",
     "\n",
     "            traced_model.save(location_traced_GRU + str(j) + \"_traced_simple_save.pt\")  # Save as traced TorchScript model\n",
+    "            print(\"model \" + location_traced_GRU + str(j) + \"_traced_simple_save.pt\" + \" saved\")\n",
     "\n",
     "\n",
     "\n",
@@ -519,7 +522,8 @@
     "                output_names=['output'],\n",
     "                dynamic_axes={'input': {0: 'batch_size'}, 'output': {0: 'batch_size'}}\n",
     "            )\n",
-    "\n",
+    "            print(\"model \" + location_traced_GRU + str(j) + \"_traced.onnx\" + \" saved\")\n",
+    "            print(\"---------------------\")\n",
     "            print(f\"all model_{j} saved\")\n",
     "        else:\n",
     "            early_stopping_counter += 1\n",
@@ -543,7 +547,37 @@
       "-------------------------------------\n",
       "Training has started for GRU model 1\n",
       "-------------------------------------\n",
-      "Epoch [1] has started\n"
+      "Epoch [1] has started\n",
+      "Model: 1, Epoch [1/35], Loss: 12.6353\n",
+      "Model: 1, Epoch [1/35], Test Loss: 6.8296\n",
+      "New best model found! Test Loss improved from inf to 6.8296\n",
+      "model GRU/trained_models/i7/it_2/state_models/model_GRU_1.pt saved\n",
+      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced_jit_save.pt saved\n",
+      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced_simple_save.pt saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ROG\\miniconda3\\envs\\pytorch200_cuda118\\lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4476: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with GRU can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================ Diagnostic Run torch.onnx.export version 2.0.0 ================\n",
+      "verbose: False, log level: Level.ERROR\n",
+      "======================= 0 NONE 0 NOTE 0 WARNING 0 ERROR ========================\n",
+      "\n",
+      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced.onnx saved\n",
+      "---------------------\n",
+      "all model_1 saved\n",
+      "-------------------------------------\n",
+      "Epoch [2] has started\n",
+      "Model: 1, Epoch [2/35], Loss: 3.8230\n"
      ]
     }
    ],
