--- a/training.ipynb
+++ b/training.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-09T14:02:34.691671Z",
-     "start_time": "2025-07-09T14:02:32.561550Z"
+     "end_time": "2025-07-10T06:57:35.218664Z",
+     "start_time": "2025-07-10T06:57:33.169739Z"
     }
    },
    "cell_type": "code",
@@ -23,8 +23,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-09T14:02:36.266979Z",
-     "start_time": "2025-07-09T14:02:36.246499Z"
+     "end_time": "2025-07-10T06:57:36.329830Z",
+     "start_time": "2025-07-10T06:57:36.296584Z"
     }
    },
    "cell_type": "code",
@@ -55,8 +55,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-09T14:02:37.830618Z",
-     "start_time": "2025-07-09T14:02:37.822429Z"
+     "end_time": "2025-07-10T06:57:37.675619Z",
+     "start_time": "2025-07-10T06:57:37.668468Z"
     }
    },
    "cell_type": "code",
@@ -69,8 +69,8 @@
     "\n",
     "# Hyperparameters that will alter throughout the model creations\n",
     "input_size = 20  # Number of CAN signals per timestep\n",
-    "hidden_size = [128, 256, 512, 512, 768]\n",
-    "num_layers = [2, 3, 2, 3, 3]\n",
+    "hidden_size = [32, 64, 128, 64, 96]\n",
+    "num_layers = [1, 2, 1, 2, 2]\n",
     "learning_rate = [0.0001] * 5\n",
     "# num of sequences in one batch\n",
     "batch_size = [128] * 5\n",
@@ -394,9 +394,11 @@
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2025-07-09T14:47:38.294911Z",
-     "start_time": "2025-07-09T14:04:57.946128Z"
+     "start_time": "2025-07-10T06:57:40.469239Z"
     }
    },
    "cell_type": "code",
@@ -546,9 +548,9 @@
       "Training has started for GRU model 1\n",
       "-------------------------------------\n",
       "Epoch [1] has started\n",
-      "Model: 1, Epoch [1/35], Loss: 12.6353\n",
-      "Model: 1, Epoch [1/35], Test Loss: 6.8296\n",
-      "New best model found! Test Loss improved from inf to 6.8296\n",
+      "Model: 1, Epoch [1/35], Loss: 31.5534\n",
+      "Model: 1, Epoch [1/35], Test Loss: 28.0033\n",
+      "New best model found! Test Loss improved from inf to 28.0033\n",
       "model GRU/trained_models/i7/it_2/state_models/model_GRU_1.pt saved\n",
       "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced_jit_save.pt saved\n",
       "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced_simple_save.pt saved\n"
@@ -575,137 +577,11 @@
       "all model_1 saved\n",
       "-------------------------------------\n",
       "Epoch [2] has started\n",
-      "Model: 1, Epoch [2/35], Loss: 3.8230\n",
-      "Model: 1, Epoch [2/35], Test Loss: 3.5771\n",
-      "New best model found! Test Loss improved from 6.8296 to 3.5771\n",
-      "model GRU/trained_models/i7/it_2/state_models/model_GRU_1.pt saved\n",
-      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced_jit_save.pt saved\n",
-      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced_simple_save.pt saved\n",
-      "================ Diagnostic Run torch.onnx.export version 2.0.0 ================\n",
-      "verbose: False, log level: Level.ERROR\n",
-      "======================= 0 NONE 0 NOTE 0 WARNING 0 ERROR ========================\n",
-      "\n",
-      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced.onnx saved\n",
-      "---------------------\n",
-      "all model_1 saved\n",
-      "-------------------------------------\n",
-      "Epoch [3] has started\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ROG\\miniconda3\\envs\\pytorch200_cuda118\\lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4476: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with GRU can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: 1, Epoch [3/35], Loss: 2.1608\n",
-      "Model: 1, Epoch [3/35], Test Loss: 2.2089\n",
-      "New best model found! Test Loss improved from 3.5771 to 2.2089\n",
-      "model GRU/trained_models/i7/it_2/state_models/model_GRU_1.pt saved\n",
-      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced_jit_save.pt saved\n",
-      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced_simple_save.pt saved\n",
-      "================ Diagnostic Run torch.onnx.export version 2.0.0 ================\n",
-      "verbose: False, log level: Level.ERROR\n",
-      "======================= 0 NONE 0 NOTE 0 WARNING 0 ERROR ========================\n",
-      "\n",
-      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced.onnx saved\n",
-      "---------------------\n",
-      "all model_1 saved\n",
-      "-------------------------------------\n",
-      "Epoch [4] has started\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ROG\\miniconda3\\envs\\pytorch200_cuda118\\lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4476: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with GRU can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: 1, Epoch [4/35], Loss: 1.3284\n",
-      "Model: 1, Epoch [4/35], Test Loss: 1.3691\n",
-      "New best model found! Test Loss improved from 2.2089 to 1.3691\n",
-      "model GRU/trained_models/i7/it_2/state_models/model_GRU_1.pt saved\n",
-      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced_jit_save.pt saved\n",
-      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced_simple_save.pt saved\n",
-      "================ Diagnostic Run torch.onnx.export version 2.0.0 ================\n",
-      "verbose: False, log level: Level.ERROR\n",
-      "======================= 0 NONE 0 NOTE 0 WARNING 0 ERROR ========================\n",
-      "\n",
-      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced.onnx saved\n",
-      "---------------------\n",
-      "all model_1 saved\n",
-      "-------------------------------------\n",
-      "Epoch [5] has started\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ROG\\miniconda3\\envs\\pytorch200_cuda118\\lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4476: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with GRU can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: 1, Epoch [5/35], Loss: 0.8319\n",
-      "Model: 1, Epoch [5/35], Test Loss: 0.8464\n",
-      "New best model found! Test Loss improved from 1.3691 to 0.8464\n",
-      "model GRU/trained_models/i7/it_2/state_models/model_GRU_1.pt saved\n",
-      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced_jit_save.pt saved\n",
-      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced_simple_save.pt saved\n",
-      "================ Diagnostic Run torch.onnx.export version 2.0.0 ================\n",
-      "verbose: False, log level: Level.ERROR\n",
-      "======================= 0 NONE 0 NOTE 0 WARNING 0 ERROR ========================\n",
-      "\n",
-      "model GRU/trained_models/i7/it_2/traced_models/model_GRU_1_traced.onnx saved\n",
-      "---------------------\n",
-      "all model_1 saved\n",
-      "-------------------------------------\n",
-      "Epoch [6] has started\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ROG\\miniconda3\\envs\\pytorch200_cuda118\\lib\\site-packages\\torch\\onnx\\symbolic_opset9.py:4476: UserWarning: Exporting a model to ONNX with a batch_size other than 1, with a variable length with GRU can cause an error when running the ONNX model with a different batch size. Make sure to save the model with a batch size of 1, or define the initial states (h0/c0) as inputs of the model. \n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[6], line 37\u001B[0m\n\u001B[0;32m     34\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m-------------------------------------\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m     35\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mEpoch [\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mepoch\u001B[38;5;241m+\u001B[39m\u001B[38;5;241m1\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m] has started\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m---> 37\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m batch_idx, (features, speeds) \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(train_dataloader):\n\u001B[0;32m     38\u001B[0m     speeds \u001B[38;5;241m=\u001B[39m speeds\u001B[38;5;241m.\u001B[39msqueeze(\u001B[38;5;241m1\u001B[39m)  \u001B[38;5;66;03m# Remove extra dimension from speeds if present\u001B[39;00m\n\u001B[0;32m     39\u001B[0m     features, speeds \u001B[38;5;241m=\u001B[39m features\u001B[38;5;241m.\u001B[39mto(device), speeds\u001B[38;5;241m.\u001B[39mto(device)\n",
-      "File \u001B[1;32m~\\miniconda3\\envs\\pytorch200_cuda118\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:634\u001B[0m, in \u001B[0;36m_BaseDataLoaderIter.__next__\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    631\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_sampler_iter \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[0;32m    632\u001B[0m     \u001B[38;5;66;03m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001B[39;00m\n\u001B[0;32m    633\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_reset()  \u001B[38;5;66;03m# type: ignore[call-arg]\u001B[39;00m\n\u001B[1;32m--> 634\u001B[0m data \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_next_data\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    635\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_num_yielded \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[0;32m    636\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_dataset_kind \u001B[38;5;241m==\u001B[39m _DatasetKind\u001B[38;5;241m.\u001B[39mIterable \u001B[38;5;129;01mand\u001B[39;00m \\\n\u001B[0;32m    637\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_IterableDataset_len_called \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;129;01mand\u001B[39;00m \\\n\u001B[0;32m    638\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_num_yielded \u001B[38;5;241m>\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_IterableDataset_len_called:\n",
-      "File \u001B[1;32m~\\miniconda3\\envs\\pytorch200_cuda118\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:1329\u001B[0m, in \u001B[0;36m_MultiProcessingDataLoaderIter._next_data\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m   1326\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_process_data(data)\n\u001B[0;32m   1328\u001B[0m \u001B[38;5;28;01massert\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_shutdown \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_tasks_outstanding \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0\u001B[39m\n\u001B[1;32m-> 1329\u001B[0m idx, data \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_get_data\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1330\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_tasks_outstanding \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[0;32m   1331\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_dataset_kind \u001B[38;5;241m==\u001B[39m _DatasetKind\u001B[38;5;241m.\u001B[39mIterable:\n\u001B[0;32m   1332\u001B[0m     \u001B[38;5;66;03m# Check for _IterableDatasetStopIteration\u001B[39;00m\n",
-      "File \u001B[1;32m~\\miniconda3\\envs\\pytorch200_cuda118\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:1285\u001B[0m, in \u001B[0;36m_MultiProcessingDataLoaderIter._get_data\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m   1283\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_pin_memory:\n\u001B[0;32m   1284\u001B[0m     \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_pin_memory_thread\u001B[38;5;241m.\u001B[39mis_alive():\n\u001B[1;32m-> 1285\u001B[0m         success, data \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_try_get_data\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1286\u001B[0m         \u001B[38;5;28;01mif\u001B[39;00m success:\n\u001B[0;32m   1287\u001B[0m             \u001B[38;5;28;01mreturn\u001B[39;00m data\n",
-      "File \u001B[1;32m~\\miniconda3\\envs\\pytorch200_cuda118\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:1133\u001B[0m, in \u001B[0;36m_MultiProcessingDataLoaderIter._try_get_data\u001B[1;34m(self, timeout)\u001B[0m\n\u001B[0;32m   1120\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21m_try_get_data\u001B[39m(\u001B[38;5;28mself\u001B[39m, timeout\u001B[38;5;241m=\u001B[39m_utils\u001B[38;5;241m.\u001B[39mMP_STATUS_CHECK_INTERVAL):\n\u001B[0;32m   1121\u001B[0m     \u001B[38;5;66;03m# Tries to fetch data from `self._data_queue` once for a given timeout.\u001B[39;00m\n\u001B[0;32m   1122\u001B[0m     \u001B[38;5;66;03m# This can also be used as inner loop of fetching without timeout, with\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m   1130\u001B[0m     \u001B[38;5;66;03m# Returns a 2-tuple:\u001B[39;00m\n\u001B[0;32m   1131\u001B[0m     \u001B[38;5;66;03m#   (bool: whether successfully get data, any: data if successful else None)\u001B[39;00m\n\u001B[0;32m   1132\u001B[0m     \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m-> 1133\u001B[0m         data \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_data_queue\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtimeout\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mtimeout\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1134\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m (\u001B[38;5;28;01mTrue\u001B[39;00m, data)\n\u001B[0;32m   1135\u001B[0m     \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n\u001B[0;32m   1136\u001B[0m         \u001B[38;5;66;03m# At timeout and error, we manually check whether any worker has\u001B[39;00m\n\u001B[0;32m   1137\u001B[0m         \u001B[38;5;66;03m# failed. Note that this is the only mechanism for Windows to detect\u001B[39;00m\n\u001B[0;32m   1138\u001B[0m         \u001B[38;5;66;03m# worker failures.\u001B[39;00m\n",
-      "File \u001B[1;32m~\\miniconda3\\envs\\pytorch200_cuda118\\lib\\queue.py:180\u001B[0m, in \u001B[0;36mQueue.get\u001B[1;34m(self, block, timeout)\u001B[0m\n\u001B[0;32m    178\u001B[0m         \u001B[38;5;28;01mif\u001B[39;00m remaining \u001B[38;5;241m<\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;241m0.0\u001B[39m:\n\u001B[0;32m    179\u001B[0m             \u001B[38;5;28;01mraise\u001B[39;00m Empty\n\u001B[1;32m--> 180\u001B[0m         \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mnot_empty\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mwait\u001B[49m\u001B[43m(\u001B[49m\u001B[43mremaining\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    181\u001B[0m item \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_get()\n\u001B[0;32m    182\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mnot_full\u001B[38;5;241m.\u001B[39mnotify()\n",
-      "File \u001B[1;32m~\\miniconda3\\envs\\pytorch200_cuda118\\lib\\threading.py:324\u001B[0m, in \u001B[0;36mCondition.wait\u001B[1;34m(self, timeout)\u001B[0m\n\u001B[0;32m    322\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    323\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m timeout \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[1;32m--> 324\u001B[0m         gotit \u001B[38;5;241m=\u001B[39m \u001B[43mwaiter\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43macquire\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtimeout\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    325\u001B[0m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    326\u001B[0m         gotit \u001B[38;5;241m=\u001B[39m waiter\u001B[38;5;241m.\u001B[39macquire(\u001B[38;5;28;01mFalse\u001B[39;00m)\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+      "Model: 1, Epoch [2/35], Loss: 17.3572\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": null
   }
  ],
  "metadata": {
