changing the structure

--- a/training_codes/training_debug.ipynb
+++ b/training_codes/training_debug.ipynb
@@ -36,10 +36,10 @@
    "cell_type": "code",
    "source": [
     "# Set dataset path\n",
-    "training_data_path = \"data/i7/it_1/1_training\"\n",
+    "training_data_path = \"../data/i7/it_1/1_training\"\n",
     "extension = \"*.csv\"\n",
     "\n",
-    "test_data_path = \"data/i7/it_1/2_testing\"\n",
+    "test_data_path = \"../data/i7/it_1/2_testing\"\n",
     "\n",
     "# Hyperparameters that will alter throughout the model creations\n",
     "input_size = 20  # Number of CAN signals per timestep\n",
