--- a/3_code/training_codes/training_debug.ipynb
+++ b/3_code/training_codes/training_debug.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-05T11:26:11.066393Z",
+     "start_time": "2025-09-05T11:26:08.752424Z"
+    }
+   },
    "cell_type": "code",
    "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(\"../../3_code\"))\n",
+    "\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from classes import SpeedEstimatorRNN, VehicleSpeedDatasetLongLat, VehicleSpeedDatasetLong, SpeedEstimatorLSTM, SpeedEstimatorGRU\n",
@@ -12,7 +21,7 @@
    ],
    "id": "1c27703c12ca4f80",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -369,9 +378,6 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
      "start_time": "2025-07-15T08:49:32.988223Z"
     }
