--- a/3_code/training_debug.ipynb
+++ b/3_code/training_debug.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "sys.path.append(os.path.abspath(\"../../3_code\"))\n",
+    "sys.path.append(os.path.abspath(\"\"))\n",
     "\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
@@ -28,7 +28,7 @@
    "cell_type": "code",
    "source": [
     "if torch.cuda.is_available():\n",
-    "    print(\"CUDA is available! You can use a GPU for training.\")\n",
+    "    print(\"CUDA is available! You can use a GPU for 1_training.\")\n",
     "    print(\"Number of GPUs available:\", torch.cuda.device_count())\n",
     "    print(\"Current GPU being used:\", torch.cuda.current_device())\n",
     "    print(\"GPU Name:\", torch.cuda.get_device_name(torch.cuda.current_device()))\n",
@@ -218,7 +218,7 @@
     "        if early_stopping_counter >= patience:\n",
     "            print(\"Early stopping triggered -> starting next model!\")\n",
     "            print(\"------------------------------------------------\")\n",
-    "            break  # Exit the training loop early\n",
+    "            break  # Exit the 1_training loop early\n",
     "\n",
     "    if early_stopping_counter < patience:\n",
     "        print(\"We're out of epochs but patience limit has not been reached -> starting next model!\")\n",
@@ -360,7 +360,7 @@
     "        if early_stopping_counter >= patience:\n",
     "            print(\"Early stopping triggered -> starting next model!\")\n",
     "            print(\"------------------------------------------------\")\n",
-    "            break  # Exit the training loop early\n",
+    "            break  # Exit the 1_training loop early\n",
     "\n",
     "    if early_stopping_counter < patience:\n",
     "        print(\"We're out of epochs but patience limit has not been reached -> starting next model!\")\n",
@@ -512,7 +512,7 @@
     "        if early_stopping_counter >= patience:\n",
     "            print(\"Early stopping triggered -> starting next model!\")\n",
     "            print(\"------------------------------------------------\")\n",
-    "            break  # Exit the training loop early\n",
+    "            break  # Exit the 1_training loop early\n",
     "\n",
     "    if early_stopping_counter < patience:\n",
     "        print(\"We're out of epochs but patience limit has not been reached -> starting next model!\")\n",
