--- a/3_code/testing_debug.ipynb
+++ b/3_code/testing_debug.ipynb
@@ -84,7 +84,8 @@
    "source": [
     "#Define and load the model\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n"
+    "\n",
+    "#---- itt hagytam abba -> már be kell tölteni a modellt, leffutatni a mérést és eltárolni a becsült értékeket"
    ],
    "id": "a12e038d0a9a52f",
    "outputs": [
