--- a/3_code/main_testing.ipynb
+++ b/3_code/main_testing.ipynb
@@ -6,73 +6,71 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-05T11:55:12.054610Z",
-     "start_time": "2025-09-05T11:55:12.024046Z"
+     "end_time": "2025-09-18T10:16:23.008108Z",
+     "start_time": "2025-09-18T10:16:22.985069Z"
     }
    },
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
     "\n",
-    "# defining the hyperparameter set as DataFrame\n",
-    "param_matrix = [\n",
-    "    [1, \"RNN\",  20, 64, 1, 1e-3,  64, 0.2, \"Adam\"],\n",
-    "    [2, \"LSTM\", 30, 128, 2, 5e-4, 128, 0.3, \"RMSProp\"],\n",
-    "    [3, \"GRU\",  50, 64, 3, 1e-3,  64, 0.1, \"Adam\"],\n",
-    "]\n",
+    "#Reading in the num of models and model locations\n",
+    "model_folder_loc = \"../2_trained_models/GRU/trained_models/i7/it_4_norm/state_models/lon/\"\n",
+    "pt_files = [f for f in os.listdir(model_folder_loc) if f.endswith(\".pt\")]\n",
     "\n",
-    "# Define column names\n",
-    "columns = [\"ID\" \"Model\", \"Input_ID\", \"Seq_len\", \"Hidden_size\", \"Layers\", \"LR\",\n",
-    "           \"Batch_size\", \"Dropout_rate\", \"Optimizer\"]\n",
-    "\n",
-    "# Build DataFrame\n",
-    "df = pd.DataFrame(param_matrix, columns=columns)\n",
-    "\n",
-    "input_matrix = [\n",
-    "    []\n",
-    "]\n",
-    "\n",
-    "print(df)"
+    "num_of_models = len(pt_files)"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   ID Model  Seq_len  Hidden_size  Layers      LR  Batch  Dropout Optimizer\n",
-      "0   1   RNN       20           64       1  0.0010     64      0.2      Adam\n",
-      "1   2  LSTM       30          128       2  0.0005    128      0.3   RMSProp\n",
-      "2   3   GRU       50           64       3  0.0010     64      0.1      Adam\n"
-     ]
-    }
-   ],
-   "execution_count": 2
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-05T11:58:40.916663Z",
-     "start_time": "2025-09-05T11:58:40.908673Z"
+     "end_time": "2025-09-18T10:17:12.405747Z",
+     "start_time": "2025-09-18T10:17:12.399741Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "config = df.loc[df[\"ID\"] == 3].to_dict(orient=\"records\")[0]\n",
-    "config[\"Optimizer\"]"
-   ],
+   "source": "pt_files.sort()",
    "id": "1d588f861c290f5c",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Adam'"
+       "['model_GRU_lon_0.pt',\n",
+       " 'model_GRU_lon_1.pt',\n",
+       " 'model_GRU_lon_10.pt',\n",
+       " 'model_GRU_lon_11.pt',\n",
+       " 'model_GRU_lon_12.pt',\n",
+       " 'model_GRU_lon_13.pt',\n",
+       " 'model_GRU_lon_14.pt',\n",
+       " 'model_GRU_lon_15.pt',\n",
+       " 'model_GRU_lon_16.pt',\n",
+       " 'model_GRU_lon_17.pt',\n",
+       " 'model_GRU_lon_18.pt',\n",
+       " 'model_GRU_lon_19.pt',\n",
+       " 'model_GRU_lon_2.pt',\n",
+       " 'model_GRU_lon_20.pt',\n",
+       " 'model_GRU_lon_21.pt',\n",
+       " 'model_GRU_lon_22.pt',\n",
+       " 'model_GRU_lon_23.pt',\n",
+       " 'model_GRU_lon_24.pt',\n",
+       " 'model_GRU_lon_3.pt',\n",
+       " 'model_GRU_lon_4.pt',\n",
+       " 'model_GRU_lon_5.pt',\n",
+       " 'model_GRU_lon_6.pt',\n",
+       " 'model_GRU_lon_7.pt',\n",
+       " 'model_GRU_lon_8.pt',\n",
+       " 'model_GRU_lon_9.pt']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "metadata": {
