--- a/3_code/testing_debug.ipynb
+++ b/3_code/testing_debug.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "        model.load_state_dict(checkpoint['model_state_dict'])  # Load the trained weights\n",
     "        model = model.to(device)  # Move model to the appropriate device\n",
-    "        model.eval()  # Set model to evaluation model\n",
+    "        model.eval()  # Set model to eval model\n",
     "\n",
     "        # Inference\n",
     "        with torch.no_grad():\n",
@@ -228,7 +228,7 @@
     "\n",
     "        model.load_state_dict(checkpoint['model_state_dict'])  # Load the trained weights\n",
     "        model = model.to(device)  # Move model to the appropriate device\n",
-    "        model.eval()  # Set model to evaluation model\n",
+    "        model.eval()  # Set model to eval model\n",
     "\n",
     "        # Inference\n",
     "        with torch.no_grad():\n",
