--- a/3_code/training_debug.ipynb
+++ b/3_code/training_debug.ipynb
@@ -114,7 +114,7 @@
     "\n",
     "    # Load test dataset and DataLoader\n",
     "    test_dataset = VehicleSpeedDatasetLongLat(test_data_path, extension, seq_length=sequence_length[j], step_size=step_size)\n",
-    "    test_dataloader = DataLoader(test_dataset, batch_size=1, shuffle=False)  # Batch size = 1 for test evaluation\n",
+    "    test_dataloader = DataLoader(test_dataset, batch_size=1, shuffle=False)  # Batch size = 1 for test eval\n",
     "\n",
     "\n",
     "    # Initialize model, loss function, and optimizer\n",
@@ -256,7 +256,7 @@
     "\n",
     "    # Load test dataset and DataLoader\n",
     "    test_dataset = VehicleSpeedDatasetLongLat(test_data_path, extension, seq_length=sequence_length[j], step_size=step_size)\n",
-    "    test_dataloader = DataLoader(test_dataset, batch_size=1, shuffle=False)  # Batch size = 1 for test evaluation\n",
+    "    test_dataloader = DataLoader(test_dataset, batch_size=1, shuffle=False)  # Batch size = 1 for test eval\n",
     "\n",
     "\n",
     "    # Initialize model, loss function, and optimizer\n",
@@ -402,7 +402,7 @@
     "\n",
     "    # Load test dataset and DataLoader\n",
     "    test_dataset = VehicleSpeedDatasetLong(test_data_path, extension, seq_length=sequence_length[j], step_size=step_size)\n",
-    "    test_dataloader = DataLoader(test_dataset, batch_size=1, shuffle=False)  # Batch size = 1 for test evaluation\n",
+    "    test_dataloader = DataLoader(test_dataset, batch_size=1, shuffle=False)  # Batch size = 1 for test eval\n",
     "\n",
     "    # Initialize model, loss function, and optimizer\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
